--- a/src/app/shared/components/body/body.component.html
+++ b/src/app/shared/components/body/body.component.html
@@ -1,3 +1,4 @@
+<section class="conteiner">
 <section class="marks">
     <div class="marks__primary">
         <img src="assets/primerImgMain.png" alt="imgmarks" class="marks__primary-clarifion">
@@ -45,8 +46,8 @@
     </section>
     
     <section class="rightColumn">
-        <div class="rightColumn__text">
-                <img src="assets/imgtext.png" alt="imgtext" class="rightColumn__text-primary">
+        <div class="rightColumn__img">
+                <img src="assets/imgtext.png" alt="imgtext" class="rightColumn__img-primary">
         </div>
 
         <div class="rightColumn__products">
@@ -70,15 +71,15 @@
             <div class="rightColumn__Medium">
                 <div class="rightColumn__Medium-text">
                     <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
-                    <p class="rightColumn__Medium-text-paragraph">Negative lon Technology may help with allergens</p>
+                    <p class="rightColumn__Medium-text-paragraph">Negative lon Technology may <span class="rightColumn__Medium-text-fw">help with allergens</span></p>
                 </div>
                 <div class="rightColumn__Medium-text">
                     <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
-                        <p class="rightColumn__Medium-text-paragraph">Designed for air rejuvenation</p>
+                        <p class="rightColumn__Medium-text-paragraph">Designed for <span class="rightColumn__Medium-text-fw">air rejuvenation</span></p>
                     </div>
                     <div class="rightColumn__Medium-text">
                         <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
-                        <p class="rightColumn__Medium-text-paragraph">Perfect for every room in tall types of places.</p>
+                        <p class="rightColumn__Medium-text-paragraph"><span class="rightColumn__Medium-text-fw">Perfect for every room</span> in tall types of places.</p>
                     </div>
                 </div>    
                 <div class="rightColumn__desc">
@@ -92,7 +93,8 @@
                 </div> 
                 <div class="rightColumn__icon">
                     <img src="assets/icon_guarantee.png" alt="imgIcon" class="rightColumn__icon-img">
-                    <p class="rightColumn__icon-text">If you are not completely thrilled with your Clarifion - We have a 30 day satisfaction guarantee. Please refer to our return policy at the bottom of the page for more details. Happy Shopping!</p>
+                    <p class="rightColumn__icon-text">If you are not completely thrilled with your Clarifion - We have a <span class="rightColumn__icon-text-fw"> 30 day satisfaction guarantee.</span> Please refer to our return policy at the bottom of the page for more details. Happy Shopping!</p>
                 </div>
     </section>
+</section>
 </section>
