--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,5 @@
 .nabvar {
+  width: 100%;
   height: 50px;
   background-color: #252F3D;
   display: flex;
@@ -55,4 +56,21 @@
     width: 257px;
     height: 22px;
   }
+
+  .carousel {
+    &-inner {
+  display: flex;
+  padding: 10px 130px 0px 0px;
+  flex-direction: row;
+  justify-content: space-around;
+    }
 }
+}
+
+@media (min-width: 768px) and (max-width: 1000px) {
+ .nabvar {
+  width: 140vh;
+ }
+}
+  
+
